# nfl-gpp-sim-optimizer-

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  simulator.py  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  detect-blocked-endpoints.yml  egress-allowlist-smoke.yml  run-optimizer.yml
.streamlit/: config.toml
app/: streamlit_app.py
docs/: compare_projections.md  gpp_strategy_blueprint.md  master_reference.md  runbook-sim-2025.md
docs/research/: README.md  monte_carlo_methodology.md
scripts/: build_baseline.py  build_boom_thresholds.py
src/: __init__.py
src/ingest/: __init__.py  name_normalizer.py  scoring.py  site_players.py
src/metrics/: pipeline.py  player_metrics.py  prep.py  sources.py  team_metrics.py
src/nfl_gpp_sim_optimizer/: chalk.py  cli.py  io.py  optimizer.py  pipeline.py  projections.py
src/projections/: __init__.py  boom_score.py  diagnostics.py  prior_builder.py  run_week_from_site_players.py  value_metrics.py
src/sim/: game_simulator.py
